welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: not found: value t
  for ( i <- 0 to t-1){
                  ^