welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var a : Int = 0
  var p : Int = 0
  for ( i <- 0 to t-1){
      if (nums(i)>a) {
        a = nums(i)
        p=i
      }
    }
  return p
 }